Minor revision of text and examples, re-run examples

--- a/system_properties/classes.ipynb
+++ b/system_properties/classes.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Classes of Systems\n",
     "\n",
-    "The spectral and temporal characteristics of a linear-time invariant (LTI) system are given by its transfer function $H(s)$ and impulse response $h(t) = \\mathcal{L}^{-1} \\{ H(s) \\}$, respectively. However it is useful to introduce some higher-level properties and classes of LTI systems. These are for instance useful for the classification of existing systems or the design of systems with specific properties."
+    "The spectral and temporal characteristics of a linear-time invariant (LTI) system are given by its impulse response $h(t)$ and transfer function $H(s) = \\mathcal{L} \\{ h(t) \\}$, respectively. However it is useful to introduce some classes of LTI systems with specific higher-level properties. These are for instance useful for the design of systems with specific desired properties."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "H(s) = H^*(s^*)\n",
     "\\end{equation}\n",
     "\n",
-    "for a real-valued system due to the [symmetry of the Laplace transform for real-valued signals](../laplace_transform/properties.ipynb#Symmetry-for-Real-Valued-Signals). It follows, that the poles and zeros of a rational transfer function $H(s)$ are either real-valued or complex conjugate pairs.\n",
+    "due to the [symmetry of the Laplace transform for real-valued signals](../laplace_transform/properties.ipynb#Symmetry-for-Real-Valued-Signals). It follows, that the poles and zeros of a rational transfer function $H(s)$ are either real-valued or complex conjugate pairs.\n",
     "\n",
     "If existing, the transfer function $H(j \\omega) = \\mathcal{F} \\{ h(t) \\}$ in the Fourier domain shows also conjugate complex symmetry\n",
     "\n",
@@ -46,16 +46,16 @@
     "H(j \\omega) = H^*(-j \\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "for a real-valued system due to the [symmetry of the Fourier transform for real-valued signals](../fourier_transform/properties.ipynb#Real-valued-signals). The magnitude spectrum $|H(j \\omega)|$ shows even symmetry and the phase $\\varphi(j \\omega)$ odd symmetry\n",
+    "due to the [symmetry of the Fourier transform for real-valued signals](../fourier_transform/properties.ipynb#Real-valued-signals). The magnitude spectrum $|H(j \\omega)|$ shows even symmetry and the phase $\\varphi(j \\omega)$ odd symmetry\n",
     "\n",
     "\\begin{align}\n",
     "|H(j \\omega)| &= |H(-j \\omega)| \\\\\n",
     "\\varphi(j \\omega) &= - \\varphi(-j \\omega)\n",
     "\\end{align}\n",
     "\n",
-    "Due to these symmetry relations often only the positive part $\\omega \\geq 0$ of the magnitude spectrum and phase are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
+    "Due to these symmetry relations often only the positive part $\\omega \\geq 0$ of the magnitude and phase of the transfer function are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
     "\n",
-    "Real-valued systems are of paramount importance in practical applications, since physically existing signals are real-valued. The symmetry relations derived above have to be considered when designing real-valued systems in the spectral domain."
+    "Since physically existing signals are real-valued, Real-valued systems are of paramount importance in practical applications. The symmetry relations derived above have to be considered when designing real-valued systems in the spectral domain."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "### Distortionless System\n",
     "\n",
-    "A distortionless system is a system whose output signal $x(t)$ is the attenuated and delayed version of the input signal $y(t)$\n",
+    "A distortionless system is a system whose output signal $y(t)$ is the attenuated and delayed version of the input signal $x(t)$\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = H_0 \\cdot x(t - \\tau)\n",
@@ -119,7 +119,7 @@
     "h(t) = h^*(-t)\n",
     "\\end{equation}\n",
     "\n",
-    "This result can be generalized to the case $c \\neq 0$ by applying the [temporal shift theorem](../fourier_transform/theorems.ipynb#Temporal-Shift-Theorem)\n",
+    "This result can be generalized to the case $c \\neq 0$ by considering the [temporal shift theorem](../fourier_transform/theorems.ipynb#Temporal-Shift-Theorem) when deriving the impulse response from the transfer function. Above symmetry generalizes to\n",
     "\n",
     "\\begin{equation}\n",
     "h(t - c) = h^*(-t + c)\n",
@@ -171,7 +171,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "The minimum-phase system with transfer function\n",
+    "The linear-phase system with transfer function\n",
     "\n",
     "\\begin{equation}\n",
     "H(j \\omega) = \\text{rect}(\\omega - \\frac{1}{2}) \\cdot e^{-j c \\omega}\n",
@@ -180,8 +180,8 @@
     "is investigated in this exercise.\n",
     "\n",
     "* Is the system real-valued?\n",
-    "* Derive the impulse response $h(t)$ of the minimum-phase system.\n",
-    "* Do the above derived symmetries hold for the impulse response? "
+    "* Derive the impulse response $h(t)$ of the linear-phase system.\n",
+    "* Do the above derived symmetries hold for the impulse response?"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "\n",
     "For a given magnitude response $|H(j \\omega)|$ often the realization which has the minimum possible group delay $t_g(\\omega)$ is desired. The group delay quantifies the frequency dependent delay a system introduces to a signal. For many applications this delay should be as small as possible. A [causal and stable system](causality_stability.ipynb) with rational transfer function $H(s)$ is minimum-phase iff it has no zeros and poles in the right $s$-half-plane. Such a system is termed [*minimum-phase system*](https://en.wikipedia.org/wiki/Minimum_phase). It has the minimum possible group delay for a given magnitude response.\n",
     "\n",
-    "In order to proof this, the dependence of the magnitude response $|H(j \\omega)|$ and phase $\\varphi_\\text{H}(j \\omega)$ on the locations of the poles and zeros of $H(s)$ is analyzed. It is assumed in the following that the poles of the system are located in the left $s$-half-plane. The magnitude response of the system can then be written as\n",
+    "In order to proof this, the dependence of the magnitude response $|H(j \\omega)|$ and phase $\\varphi_\\text{H}(j \\omega)$ on the locations of the poles and zeros of $H(s)$ is analyzed. It is assumed in the following that the poles of the system are located in the left $s$-half-plane, hence that the system is stable. The magnitude response of the system can then be written as\n",
     "\n",
     "\\begin{equation}\n",
     "|H(j \\omega)| = |K| \\cdot \\frac{\\prod_{\\mu=0}^{Q} | j \\omega - s_{0 \\mu} |}{\\prod_{\\nu=0}^{P} | j \\omega - s_{\\infty \\nu}|}\n",
@@ -226,16 +226,16 @@
    "source": [
     "**Example**\n",
     "\n",
-    "A real-valued minimum-phase system (MPS) with the following transfer function is investigated\n",
+    "A stable real-valued minimum-phase system (MPS) with the following transfer function is investigated\n",
     "\n",
     "\\begin{equation}\n",
-    "H_\\text{MPS}(j \\omega) = \\frac{(j \\omega - s_0)(j \\omega - s_0^*)}{j \\omega - s_\\infty}\n",
+    "H_\\text{MPS}(j \\omega) = \\frac{(j \\omega - s_0)(j \\omega - s_0^*)}{(j \\omega - s_\\infty)^2}\n",
     "\\end{equation}\n",
     "\n",
-    "The system has one real-valued pole $s_\\infty$, and a pair of complex conjugate zeros $s_0$ and $s_0^*$. The corresponding non-minimum-phase system (NMPS) with equal magnitude response $|H_\\text{MPS}(j \\omega)| = |H_\\text{NMPS}(j \\omega)|$ is yielded by mirroring the zeros at the imaginary axis\n",
+    "The system has a real-valued pole $s_\\infty$ of order two, and a pair of complex conjugate zeros $s_0$ and $s_0^*$. The corresponding non-minimum-phase system (NMPS) with equal magnitude response $|H_\\text{MPS}(j \\omega)| = |H_\\text{NMPS}(j \\omega)|$ is yielded by mirroring the zeros at the imaginary axis\n",
     "\n",
     "\\begin{equation}\n",
-    "H_\\text{NMPS}(j \\omega) = \\frac{(j \\omega + s_0^*)(j \\omega + s_0)}{j \\omega - s_\\infty}\n",
+    "H_\\text{NMPS}(j \\omega) = \\frac{(j \\omega + s_0^*)(j \\omega + s_0)}{(j \\omega - s_\\infty)^2}\n",
     "\\end{equation}\n",
     "\n",
     "The magnitude response and group delay for both systems is computed and plotted for $s_\\infty = -2$ and $s_0 = - 1 + j$. First the transfer functions are defined and the group delays are computed"
@@ -252,8 +252,8 @@
     "s_0 = - 1 + sym.I\n",
     "s_inf = -2\n",
     "\n",
-    "H_MPS = (jw - s_0)*(jw - sym.conjugate(s_0))/(jw - s_inf)\n",
-    "H_NMPS = (jw + sym.conjugate(s_0))*(jw + s_0)/(jw - s_inf)\n",
+    "H_MPS = (jw - s_0)*(jw - sym.conjugate(s_0))/(jw - s_inf)**2\n",
+    "H_NMPS = (jw + sym.conjugate(s_0))*(jw + s_0)/(jw - s_inf)**2\n",
     "\n",
     "tg_MPS = - sym.diff(sym.arg(H_MPS), w)\n",
     "tg_NMPS = - sym.diff(sym.arg(H_NMPS), w)"
@@ -303,7 +303,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Add a second pair of complex conjugate zeros to above MPS.\n",
+    "* Add a second pair of complex conjugate zeros and a pair of complex conjugate poles to above MPS.\n",
     "* For your MPS system derive the transfer function $H(j \\omega)$ of the corresponding maximum-phase and one mixed-phase system.\n",
     "* Compute the group delays for all three systems.\n",
     "* In what range is the group delay of the mixed-phase system located with respect to the minimum- and maximum-phase system?"
@@ -317,7 +317,7 @@
     "\n",
     "An [all-pass](https://en.wikipedia.org/wiki/All-pass_filter) is a system with constant magnitude response $|H(j \\omega)| = H_0$ but frequency dependent phase $\\varphi_\\text{H}(j \\omega)$. It allows to modify the phase of a signal without modifying its magnitude. The [distortionless system](#Distortionless-System) is a special case of an all-pass with $\\varphi_\\text{H}(j \\omega) = - \\omega \\tau$. A stable system with rational transfer function $H(s)$ is an causal all-pass iff for each pole in the left $s$-half-plane there exists a zero in the right $s$-half-plane which is mirrored at the imaginary axis $\\Re \\{ s \\} = 0$.\n",
     "\n",
-    "The magnitude response $|H(j \\omega)|$ of a system $H(s)$ in dependence of its poles and zeros has already been derived above as \n",
+    "The magnitude response $|H(j \\omega)|$ of a system $H(s)$ with respect to its poles and zeros has already been derived before as \n",
     "\n",
     "\\begin{equation}\n",
     "|H(j \\omega)| = |K| \\cdot \\frac{\\prod_{\\mu=0}^{Q} | j \\omega - s_{0 \\mu} |}{\\prod_{\\nu=0}^{P} | j \\omega - s_{\\infty \\nu}|}\n",
@@ -338,7 +338,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The properties of a real-valued 2nd-order all-pass with transfer function\n",
+    "The properties of a stable real-valued 2nd-order all-pass with transfer function\n",
     "\n",
     "\\begin{equation}\n",
     "H(j \\omega) = \\frac{(j \\omega - s_0)(j \\omega - s_0^*)}{(j \\omega - s_\\infty)(j \\omega - s_\\infty^*)}\n",
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
