--- a/system_properties/idealized_systems.ipynb
+++ b/system_properties/idealized_systems.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Idealized Systems\n",
     "\n",
-    "Idealized systems are systems with idealized properties that typically render their practical implementation infeasible. They play an important role in various fields of signal processing as they allow a convenient formulation of concepts and principles. In the following, the ideal low-pass is introduced as prototype for an idealized frequency selective system. Other frequency selective system can be deduced directly from this prototype."
+    "Idealized systems are systems with idealized properties that typically render their practical implementation infeasible. They play an important role in various fields of signal processing as they allow a convenient formulation of major concepts and principles. In the following, the ideal low-pass is introduced as prototype for an idealized frequency selective system. Other frequency selective systems can be deduced directly from this prototype."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "h(t) = \\frac{\\omega_\\text{c}}{\\pi} \\cdot \\text{sinc} ( \\omega_\\text{c} t )\n",
     "\\end{equation}\n",
     "\n",
-    "Since the impulse response is an acausal signal, the ideal low-pass is an [acausal system](causality_stability.ipynb#Condition-for-the-Impulse-Response). The sinc-function is furthermore not absolutely integrable. Hence the ideal-low pass is not a [stable system](causality_stability.ipynb#Condition-for-the-Impulse-Response) in the sense of the bounded-input bounded-output (BIBO) criterion. In conclusion, the ideal low-pass is not realizable. It can only be approximated in practical systems. It plays nevertheless an important role in the foundations of sampling and interpolation."
+    "Since the impulse response is an acausal signal, the ideal low-pass is an [acausal system](causality_stability.ipynb#Condition-for-the-Impulse-Response). The sinc-function is furthermore not absolutely integrable. Hence the ideal-low pass is not a [stable system](causality_stability.ipynb#Condition-for-the-Impulse-Response) in the sense of the bounded-input bounded-output (BIBO) criterion. In conclusion, the ideal low-pass is not realizable. It can only be approximated in practical systems. It plays nevertheless an important role in the theory of sampling and interpolation."
    ]
   },
   {
@@ -81,6 +81,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +126,7 @@
     "h(t) = \\pi \\Delta \\omega \\cdot \\text{sinc} ( \\frac{\\Delta \\omega}{2} t ) \\cdot \\cos(\\omega_\\text{c} t)\n",
     "\\end{equation}\n",
     "\n",
-    "The ideal band-pass can be interpreted as a modulated low-pass filter. Due to its relation to the ideal low-pass, it is neither causal nor stable. The ideal band-pass can only be approximated in practical realizations. Its plays an important role in the theoretical foundations of wireless communications."
+    "The ideal band-pass can be interpreted as a modulated low-pass filter. Due to its direct relation to the ideal low-pass, it is neither causal nor stable. The ideal band-pass can only be approximated in practical realizations. Its plays an important role in the theoretical foundations of wireless communications."
    ]
   },
   {
@@ -165,7 +172,7 @@
     "H(j \\omega) = 1 - \\text{rect} \\left( \\frac{\\omega}{2 \\omega_\\text{c}} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\omega_\\text{c} > 0$ denotes its cut-off frequency. The ideal high-pass removes all frequency components below the cut-off frequency $\\omega_\\text{c}$, without affecting higher frequencies. Its impulse response can be derived in a straightforward way from the impulse response of the ideal low-pass\n",
+    "where $\\omega_\\text{c} > 0$ denotes its cut-off frequency. The ideal high-pass removes all frequency components below the cut-off frequency $\\omega_\\text{c}$, without affecting higher frequencies. Its impulse response can be derived in a straightforward manner from the impulse response of the ideal low-pass\n",
     "\n",
     "\\begin{equation}\n",
     "h(t) = \\delta(t) - \\frac{\\omega_\\text{c}}{\\pi} \\cdot \\text{sinc} ( \\omega_\\text{c} t )\n",
@@ -186,7 +193,7 @@
     "H(j \\omega) =  1 - \\text{rect} \\left( \\frac{\\omega - \\omega_\\text{c}}{\\Delta \\omega} \\right) - \\text{rect} \\left( \\frac{\\omega + \\omega_\\text{c}}{\\Delta \\omega} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The ideal band-stop removes the frequency components of a signal around a given center frequency $\\omega_\\text{c}$ where the total width of this stop band is $\\Delta \\omega$. Components outside the stop band are not affected by the system.  The impulse response of the ideal band-stop can be derived in a straightforward way from the impulse response of the ideal band-pass as\n",
+    "The ideal band-stop removes the frequency components of a signal around a given center frequency $\\omega_\\text{c}$ where the total width of this stop band is $\\Delta \\omega$. Components outside the stop band are not affected by the system.  The impulse response of the ideal band-stop can be derived in a straightforward manner from the impulse response of the ideal band-pass as\n",
     "\n",
     "\\begin{equation}\n",
     "h(t) = \\delta(t) - \\pi \\Delta \\omega \\cdot \\text{sinc} ( \\frac{\\Delta \\omega}{2} t ) \\cdot \\cos(\\omega_\\text{c} t)\n",
@@ -223,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
