Added numerical approximation of transfer function of realizable low-pass

--- a/system_properties/idealized_systems.ipynb
+++ b/system_properties/idealized_systems.ipynb
@@ -81,11 +81,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The transfer function $H(j \\omega)$ of the realizable low-pass is given above in terms of a convolution integral over the rectangular and sinc signal. Applying the definition of the convolution and exploiting the properties of the rectangular signal yields\n",
+    "\n",
+    "\\begin{equation}\n",
+    "H(j \\omega) = \\frac{T}{2 \\pi} e^{-j \\omega \\frac{T}{2}} \\int_{-\\omega_\\text{c}}^{\\omega_\\text{c}} \\text{sinc} \\left( \\frac{T}{2} (\\nu - \\omega) \\right) d \\nu\n",
+    "\\end{equation}\n",
+    "\n",
+    "No closed-form solution of this integral is known. In order to gain insight into the properties of the realizable low-pass, the transfer function is approximated by numerical integration for equally spaced angular frequencies $\\omega$. Only positive angular frequencies are evaluated in order to lower the computational complexity. Note the symmetry relations of a real-valued system apply."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from numpy import linspace, array\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "nu = sym.symbols('nu', real=True)\n",
+    "w = linspace(0, 1.5*wc, 100)\n",
+    "\n",
+    "H = [(T/(2*sym.pi)).evalf(2) * sym.exp(-sym.I*wi*T/2).evalf(2) * sym.Integral(sym.sinc(T/2*(nu-wi)), (nu, -wc, wc)).evalf(2) for wi in w]\n",
+    "\n",
+    "plt.plot(w, abs(array(H)))\n",
+    "plt.xlabel('$\\omega$')\n",
+    "plt.ylabel('$|H(j \\omega)|$')\n",
+    "plt.grid();"
+   ]
   },
   {
    "cell_type": "markdown",
