Minor revisions of text, defined and plotted pulse train, re-run examples

--- a/periodic_signals/spectrum.ipynb
+++ b/periodic_signals/spectrum.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Spectrum\n",
     "\n",
-    "Periodic signals are an import class of signals. Many practical signals can be approximated reasonably well as periodic functions. The latter holds often when considering only a limited time-interval. Examples for periodic signals are a superposition of harmonic signals, signals captured from vibrating structures or rotating machinery, as well as speech signals or signals from musical instruments. The spectrum of a periodic signal exhibits specific properties which are derived in the following."
+    "Periodic signals are an import class of signals. Many practical signals can be approximated reasonably well as periodic functions. This holds especially when considering only a limited time-interval. Examples of periodic signals are superpositions of harmonic signals, signals captured from vibrating structures or rotating machinery, as well as speech signals or signals from musical instruments. The spectrum of a periodic signal exhibits specific properties which are discussed in the following."
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "A periodic signal can be represented by [periodic summation](https://en.wikipedia.org/wiki/Periodic_summation) of one period $x_0(t)$\n",
+    "A periodic signal can be represented by [periodic summation](https://en.wikipedia.org/wiki/Periodic_summation) of shifted copies of one period $x_0(t)$\n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = \\sum_{\\mu = - \\infty}^{\\infty} x_0(t - \\mu T_\\text{p})\n",
@@ -91,9 +91,7 @@
     "{\\bot \\!\\! \\bot \\!\\! \\bot}(t) = \\sum_{\\mu = - \\infty}^{\\infty} \\delta(t - \\mu)\n",
     "\\end{equation}\n",
     "\n",
-    "It is used for the representation of periodic signals and for the modeling of ideal sampling. In order to compute the spectrum of a periodic signal, the Fourier transform of the Dirac comb $\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\}$ is derived in the following.\n",
-    "\n",
-    "Fourier transformation of the left- and right-hand side of above definition yields\n",
+    "It is used for the representation of periodic signals and for the modeling of ideal sampling. In order to compute the spectrum of a periodic signal, the Fourier transform of the Dirac comb $\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\}$ is derived in the following. Fourier transformation of the left- and right-hand side of above definition yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\} = \\sum_{\\mu = - \\infty}^{\\infty} e^{-j \\mu \\omega}\n",
@@ -101,31 +99,31 @@
     "\n",
     "The exponential function $e^{-j \\mu \\omega}$ for $\\mu \\in \\mathbb{Z}$ is periodic with a period of $2 \\pi$. Hence, the Fourier transform of the Dirac comb is also periodic with a period of $2 \\pi$. \n",
     "\n",
-    "Convolving a [rectangular signal](../notebooks/continuous_signals/standard_signals.ipynb#Rectangular-Signal) with the Dirac comb results in\n",
+    "In order to gain further insight, the following convolution of a [rectangular signal](../notebooks/continuous_signals/standard_signals.ipynb#Rectangular-Signal) with a Dirac comb is considered\n",
     "\n",
     "\\begin{equation}\n",
     "{\\bot \\!\\! \\bot \\!\\! \\bot}(t) * \\text{rect}(t) = 1\n",
     "\\end{equation}\n",
     "\n",
-    "Fourier transform of the left- and right-hand side yields\n",
+    "The right hand side follows from the fact that the rectangular signals equals one for $-\\frac{1}{2} < t < \\frac{1}{2}$ which is then periodically summed up with a period of one. Fourier transform of the left- and right-hand side yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\} \\cdot \\text{sinc}\\left(\\frac{\\omega}{2}\\right) = 2 \\pi \\delta(\\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "For $\\text{sinc}( \\frac{\\omega}{2} ) \\neq 0$, which is equal to $\\omega \\neq 2 n \\cdot \\pi$ with $n \\in \\mathbb{Z} \\setminus \\{0\\}$, this can be rearranged as\n",
+    "For $\\text{sinc}( \\frac{\\omega}{2} ) \\neq 0$, which is equal to $\\omega \\neq 2 n \\cdot \\pi$ with $n \\in \\mathbb{Z} \\setminus \\{0\\}$, this can be rearranged to\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\} = 2 \\pi \\, \\delta(\\omega) \\cdot \\frac{1}{\\text{sinc}\\left(\\frac{\\omega}{2}\\right)} = 2 \\pi \\, \\delta(\\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "Note that the [multiplication property](../continuous_signals/standard_signals.ipynb#Dirac-Impulse) of the Dirac impulse and $\\text{sinc}(0) = 1$ has been used to derive the last equality. The Fourier transform is now known for the interval $-2 \\pi < \\omega < 2 \\pi$. It has already been concluded that the Fourier transform is periodic with a period of $2 \\pi$. Hence, the Fourier transformation of the Dirac comb can be derived by periodic continuation as\n",
+    "Note that the [multiplication property](../continuous_signals/standard_signals.ipynb#Dirac-Impulse) of the Dirac impulse and $\\text{sinc}(0) = 1$ has been used to derive the last equality. The Fourier transform is now known in the interval $-2 \\pi < \\omega < 2 \\pi$. It has already been concluded that the Fourier transform is periodic with a period of $2 \\pi$. Hence, the Fourier transformation of the Dirac comb can be derived by periodic continuation\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\} = \\sum_{\\mu = - \\infty}^{\\infty} 2 \\pi \\, \\delta(\\omega - 2 \\pi \\mu) = \\sum_{\\mu = - \\infty}^{\\infty} 2 \\pi \\, \\left( \\frac{\\omega}{2 \\pi} - \\mu \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The last equality follows from the scaling property of the Dirac impulse. The Fourier transform can now be rewritten in terms of the Dirac comb\n",
+    "The last equality follows from the scaling property of the Dirac impulse. Using the definition of the Dirac comb, the Fourier transform can now be rewritten in terms of the Dirac comb\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ {\\bot \\!\\! \\bot \\!\\! \\bot}(t) \\} = {\\bot \\!\\! \\bot \\!\\! \\bot} \\left( \\frac{\\omega}{2 \\pi} \\right)\n",
@@ -248,9 +246,16 @@
     "\n",
     "\\begin{equation}\n",
     "X(j \\omega) = 2 \\pi \\frac{1}{T_\\text{p}} \\sum_{\\mu = - \\infty}^{\\infty} e^{-j \\mu \\pi \\frac{T}{T_\\text{p}}} \\cdot T \\, \\text{sinc} \\left( \\mu \\pi \\frac{T}{T_\\text{p}} \\right) \\cdot \\delta \\left( \\omega - \\mu \\frac{2 \\pi}{T_\\text{p}} \\right)\n",
-    "\\end{equation}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example**\n",
     "\n",
-    "The weights of the Dirac impulses are defined in `SymPy` for fixed values $T$ and $T_\\text{p}$"
+    "The pulse train and its spectrum are illustrated by the subsequent computational example. First the pulse train is defined and plotted in `SymPy`"
    ]
   },
   {
@@ -260,9 +265,34 @@
    "outputs": [],
    "source": [
     "mu = sym.symbols('mu', integer=True)\n",
+    "t = sym.symbols('t', real=True)\n",
     "T = 2\n",
     "Tp = 5\n",
     "\n",
+    "def pulse_train(T, Tp):\n",
+    "    n = sym.symbols('n', integer=True)\n",
+    "    x0 = sym.Piecewise((0, t < 0), (1, t < T), (0, True))\n",
+    "    return sym.summation(x0.subs(t, t+n*Tp), (n, -10, 10))\n",
+    "\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", module=\"sympy.plot\")\n",
+    "sym.plot(pulse_train(T, Tp), (t, -5, 20), xlabel='$t$', ylabel='$x(t)$', adaptive=False);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The weights of the Dirac impulses are defined for fixed values $T$ and $T_\\text{p}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_mu = sym.exp(-sym.I * mu * sym.pi * T/Tp) * T * sym.sinc(mu * sym.pi * T/Tp)\n",
     "X_mu"
    ]
@@ -330,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
